--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "homepage": "https://zeenatlawal.github.io/Math-Magicians",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "big.js": "^5.2.2",
     "gh-pages": "^3.2.3",
@@ -46,11 +45,13 @@
     "@babel/eslint-parser": "^7.15.4",
     "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@testing-library/react": "^12.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.25.1",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
